--- a/IMU/.project
+++ b/IMU/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Clase 4</name>
+	<name>boostxl_edumkii_lightsensor_msp432p401r_MSP_EXP432P401R_nortos_ccs</name>
 	<comment></comment>
 	<projects>
 	</projects>
